# anianns

./: README.md  moddotplot.nf  parsediagonals.py  parsemoddotplot.py  pyproject.toml
config/: sample_config.json
src/anianns/: __main__.py  ani_matrix.py  anianns.py  build_kmer_db.py  classification.py  const.py  general_utils.py  kmer_utils.py  parse_bedfile.py  parse_dotplot.py  parse_input.py  parse_matrix.py  refine_boundaries.py
