[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anianns"
version = "0.1.1"
description = "A Python package for annotating CenSat genomic regions"
authors = [
    { name="Alex Sweeten", email="alex.sweeten@nih.gov" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["genomics", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pyGenomeTracks",
    "pysam",
    "moddotplot"
]
[project.scripts]
anianns = "anianns.__main__:main"