[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anianns"
version = "0.3.0"
description = "A Python package for annotating CenSat genomic regions"
authors = [
    { name="Alex Sweeten", email="alex.sweeten@nih.gov" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["genomics", "bioinformatics", "repeatmasker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pyGenomeTracks",
    "moddotplot"
]
[project.scripts]
anianns = "anianns.__main__:main"